<resources>
    <string name="app_name">Houser</string>

    <!--    Home page Strings-->
    <string name="home_best_houses">Best Houses</string>
    <string name="home_new_houses"> New Houses </string>
    <string name="tab_home">Home</string>
    <string name="tab_favorite">Favorites</string>
    <string name="tab_settings">Settings</string>
    <string name="str_add_a_house">Add a house</string>
    <string name="str_pick_a_photo">Pick a photo</string>
    <string name="str_title">Title</string>
    <string name="str_name_of_your_house">Name of your house</string>
    <string name="str_district_city_country">District, City, Country</string>
    <string name="str_address">Address</string>
    <string name="str_get_my_location">Get my location</string>
    <string name="str_publish">Publish</string>
    <string name="str_theme">Theme</string>
    <string name="str_enable_dark_mode">Enable dark mode</string>
    <string name="str_language">Language</string>
    <string name="str_english">English</string>
    <string name="str_french">French</string>
    <string name="str_log_out">Log out</string>
    <string name="str_tic_tac_toe_emoji">Tic tac toe 🎯</string>
    <string name="str_play">Play</string>
    <string name="str_begin">Begin</string>
    <string name="str_setup_emoji">Setup ⚙</string>
    <string name="str_first_player_name">First player name</string>
    <string name="str_second_player_name">Second player name</string>
    <string name="str_try_again">Try again</string>
    <string name="str_details">Details</string>
    <string name="str_view_on_map">View on map</string>
</resources>