<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".activities.game.TicTacToeSetupActivity">

    <!-- TITLE -->
    <TextView
        android:id="@+id/tictactoeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_setup_emoji"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <!-- 1st PLAYER -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tictactoeTitle">

        <TextView
            style="@style/fieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/red_pink"
            android:text="@string/str_first_player_name" />

        <EditText
            android:id="@+id/gameSetupTxtFirstPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/str_first_player_name"
            android:inputType="text" />
    </LinearLayout>

    <!-- 2nd PLAYER -->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            style="@style/fieldLabel"
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/str_second_player_name" />

        <EditText
            android:id="@+id/gameSetupTxtSecondPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/str_second_player_name"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/button_back"
        android:onClick="submitButtonClick"
        android:text="@string/str_begin"
        app:layout_constraintEnd_toEndOf="@+id/tictactoeTitle"
        app:layout_constraintStart_toStartOf="@+id/tictactoeTitle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>